AG discussion: expand cell decon comp section

--- a/References/references.bib
+++ b/References/references.bib
@@ -1,4 +1,81 @@
 
+@article{lin2018,
+	title = {Cell type-specific {DNA} methylation in neonatal cord tissue and cord blood: a {850K}-reference panel and comparison of cell types},
+	volume = {13},
+	issn = {1559-2294},
+	shorttitle = {Cell type-specific {DNA} methylation in neonatal cord tissue and cord blood},
+	url = {https://doi.org/10.1080/15592294.2018.1522929},
+	doi = {10.1080/15592294.2018.1522929},
+	number = {9},
+	urldate = {2021-11-09},
+	journal = {Epigenetics},
+	author = {Lin, Xinyi and Tan, Jane Yi Lin and Teh, Ai Ling and Lim, Ives Yubin and Liew, Samantha J and MacIsaac, Julia L and Chong, Yap Seng and Gluckman, Peter D and Kobor, Michael S and Cheong, Clara Yujing and Karnani, Neerja},
+	month = sep,
+	year = {2018},
+	pmid = {30232931},
+	note = {Publisher: Taylor \& Francis
+\_eprint: https://doi.org/10.1080/15592294.2018.1522929},
+	keywords = {Cellular heterogeneity, DNA methylation, neonatal epigenome wide association studies, reference panel, tissue-specificity},
+	pages = {941--958},
+}
+
+@article{gervin2016,
+	title = {Cell type specific {DNA} methylation in cord blood : {A} {450K}-reference data set and cell count-based validation of estimated cell type composition},
+	volume = {11},
+	url = {http://dx.doi.org/10.1080/15592294.2016.1214782},
+	doi = {10.1080/15592294.2016.1214782},
+	number = {9},
+	journal = {Epigenetics},
+	year = {2016},
+	keywords = {DNA methylation, Cellular heterogeneity, cord blood, EWAS, reference data set},
+	pages = {690--698},
+}
+
+@article{degoede2017,
+	title = {Cord blood hematopoietic cells from preterm infants display altered {DNA} methylation patterns.},
+	volume = {9},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/28428831},
+	doi = {10.1186/s13148-017-0339-1},
+	journal = {Clinical epigenetics},
+	author = {de Goede, Olivia M and Lavoie, Pascal M and Robinson, Wendy P},
+	year = {2017},
+	keywords = {DNA methylation, Epigenetics, Cord blood, Epigenetic clock, Gestational age, Illumina 450K array, Nucleated red blood cells, Preterm birth},
+	pages = {39--39},
+}
+
+@article{bakulski2016,
+	title = {{DNA} methylation of cord blood cell types: {Applications} for mixed cell birth studies},
+	volume = {11},
+	url = {http://dx.doi.org/10.1080/15592294.2016.1161875},
+	doi = {10.1080/15592294.2016.1161875},
+	journal = {Epigenetics},
+	author = {Bakulski, Kelly M. and Feinberg, Jason I. and Andrews, Shan V. and Yang, Jack and Brown, Shannon and L. McKenney, Stephanie and Witter, Frank and Walston, Jeremy and Feinberg, Andrew P. and Fallin, M. Daniele},
+	year = {2016},
+	keywords = {DNA methylation, Cellular heterogeneity, cord blood, epidemiology, nucleated red blood cells},
+	pages = {354--362},
+}
+
+@article{koestler2017,
+	title = {{DNA} {Methylation}-{Derived} {Neutrophil}-to-{Lymphocyte} {Ratio}: {An} {Epigenetic} {Tool} to {Explore} {Cancer} {Inflammation} and {Outcomes}},
+	volume = {26},
+	copyright = {©2016 American Association for Cancer Research.},
+	issn = {1055-9965, 1538-7755},
+	shorttitle = {{DNA} {Methylation}-{Derived} {Neutrophil}-to-{Lymphocyte} {Ratio}},
+	url = {https://cebp.aacrjournals.org/content/26/3/328},
+	doi = {10.1158/1055-9965.EPI-16-0461},
+	language = {en},
+	number = {3},
+	urldate = {2021-11-09},
+	journal = {Cancer Epidemiology and Prevention Biomarkers},
+	author = {Koestler, Devin C. and Usset, Joseph and Christensen, Brock C. and Marsit, Carmen J. and Karagas, Margaret R. and Kelsey, Karl T. and Wiencke, John K.},
+	month = mar,
+	year = {2017},
+	pmid = {27965295},
+	note = {Publisher: American Association for Cancer Research
+Section: Research Articles},
+	pages = {328--338},
+}
+
 @article{rodesch1992,
 	title = {Oxygen measurements in endometrial and trophoblastic tissues during early pregnancy},
 	volume = {80},
