--- a/References/references.bib
+++ b/References/references.bib
@@ -1,4 +1,120 @@
 
+@article{kong2019,
+	title = {Insights from deconvolution of cell subtype proportions enhance the interpretation of functional genomic data},
+	volume = {14},
+	issn = {1932-6203},
+	url = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0215987},
+	doi = {10.1371/journal.pone.0215987},
+	language = {en},
+	number = {4},
+	urldate = {2021-11-10},
+	journal = {PLOS ONE},
+	author = {Kong, Yu and Rastogi, Deepa and Seoighe, Cathal and Greally, John M. and Suzuki, Masako},
+	month = apr,
+	year = {2019},
+	note = {Publisher: Public Library of Science},
+	keywords = {Asthma, DNA methylation, Functional genomics, Gene expression, Gene ontologies, Kidneys, Mouse models, Systemic lupus erythematosus},
+	pages = {e0215987},
+}
+
+@article{filipski2021,
+	title = {{DNA} methylation-based prediction of response to immune checkpoint inhibition in metastatic melanoma},
+	volume = {9},
+	copyright = {© Author(s) (or their employer(s)) 2021. Re-use permitted under CC BY-NC. No commercial re-use. See rights and permissions. Published by BMJ.. http://creativecommons.org/licenses/by-nc/4.0/This is an open access article distributed in accordance with the Creative Commons Attribution Non Commercial (CC BY-NC 4.0) license, which permits others to distribute, remix, adapt, build upon this work non-commercially, and license their derivative works on different terms, provided the original work is properly cited, appropriate credit is given, any changes made indicated, and the use is non-commercial. See http://creativecommons.org/licenses/by-nc/4.0/.},
+	issn = {2051-1426},
+	url = {https://jitc.bmj.com/content/9/7/e002226},
+	doi = {10.1136/jitc-2020-002226},
+	language = {en},
+	number = {7},
+	urldate = {2021-11-10},
+	journal = {Journal for ImmunoTherapy of Cancer},
+	author = {Filipski, Katharina and Scherer, Michael and Zeiner, Kim N. and Bucher, Andreas and Kleemann, Johannes and Jurmeister, Philipp and Hartung, Tabea I. and Meissner, Markus and Plate, Karl H. and Fenton, Tim R. and Walter, Jörn and Tierling, Sascha and Schilling, Bastian and Zeiner, Pia S. and Harter, Patrick N.},
+	month = jul,
+	year = {2021},
+	pmid = {34281986},
+	note = {Publisher: BMJ Specialist Journals
+Section: Immunotherapy biomarkers},
+	keywords = {biomarkers, biostatistics, immunotherapy, melanoma, tumor, tumor biomarkers},
+	pages = {e002226},
+}
+
+@article{lin2018,
+	title = {Cell type-specific {DNA} methylation in neonatal cord tissue and cord blood: a {850K}-reference panel and comparison of cell types},
+	volume = {13},
+	issn = {1559-2294},
+	shorttitle = {Cell type-specific {DNA} methylation in neonatal cord tissue and cord blood},
+	url = {https://doi.org/10.1080/15592294.2018.1522929},
+	doi = {10.1080/15592294.2018.1522929},
+	number = {9},
+	urldate = {2021-11-09},
+	journal = {Epigenetics},
+	author = {Lin, Xinyi and Tan, Jane Yi Lin and Teh, Ai Ling and Lim, Ives Yubin and Liew, Samantha J and MacIsaac, Julia L and Chong, Yap Seng and Gluckman, Peter D and Kobor, Michael S and Cheong, Clara Yujing and Karnani, Neerja},
+	month = sep,
+	year = {2018},
+	pmid = {30232931},
+	note = {Publisher: Taylor \& Francis
+\_eprint: https://doi.org/10.1080/15592294.2018.1522929},
+	keywords = {Cellular heterogeneity, DNA methylation, neonatal epigenome wide association studies, reference panel, tissue-specificity},
+	pages = {941--958},
+}
+
+@article{gervin2016,
+	title = {Cell type specific {DNA} methylation in cord blood : {A} {450K}-reference data set and cell count-based validation of estimated cell type composition},
+	volume = {11},
+	url = {http://dx.doi.org/10.1080/15592294.2016.1214782},
+	doi = {10.1080/15592294.2016.1214782},
+	number = {9},
+	journal = {Epigenetics},
+	year = {2016},
+	keywords = {DNA methylation, Cellular heterogeneity, cord blood, EWAS, reference data set},
+	pages = {690--698},
+}
+
+@article{degoede2017,
+	title = {Cord blood hematopoietic cells from preterm infants display altered {DNA} methylation patterns.},
+	volume = {9},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/28428831},
+	doi = {10.1186/s13148-017-0339-1},
+	journal = {Clinical epigenetics},
+	author = {de Goede, Olivia M and Lavoie, Pascal M and Robinson, Wendy P},
+	year = {2017},
+	keywords = {DNA methylation, Epigenetics, Cord blood, Epigenetic clock, Gestational age, Illumina 450K array, Nucleated red blood cells, Preterm birth},
+	pages = {39--39},
+}
+
+@article{bakulski2016,
+	title = {{DNA} methylation of cord blood cell types: {Applications} for mixed cell birth studies},
+	volume = {11},
+	url = {http://dx.doi.org/10.1080/15592294.2016.1161875},
+	doi = {10.1080/15592294.2016.1161875},
+	journal = {Epigenetics},
+	author = {Bakulski, Kelly M. and Feinberg, Jason I. and Andrews, Shan V. and Yang, Jack and Brown, Shannon and L. McKenney, Stephanie and Witter, Frank and Walston, Jeremy and Feinberg, Andrew P. and Fallin, M. Daniele},
+	year = {2016},
+	keywords = {DNA methylation, Cellular heterogeneity, cord blood, epidemiology, nucleated red blood cells},
+	pages = {354--362},
+}
+
+@article{koestler2017,
+	title = {{DNA} {Methylation}-{Derived} {Neutrophil}-to-{Lymphocyte} {Ratio}: {An} {Epigenetic} {Tool} to {Explore} {Cancer} {Inflammation} and {Outcomes}},
+	volume = {26},
+	copyright = {©2016 American Association for Cancer Research.},
+	issn = {1055-9965, 1538-7755},
+	shorttitle = {{DNA} {Methylation}-{Derived} {Neutrophil}-to-{Lymphocyte} {Ratio}},
+	url = {https://cebp.aacrjournals.org/content/26/3/328},
+	doi = {10.1158/1055-9965.EPI-16-0461},
+	language = {en},
+	number = {3},
+	urldate = {2021-11-09},
+	journal = {Cancer Epidemiology and Prevention Biomarkers},
+	author = {Koestler, Devin C. and Usset, Joseph and Christensen, Brock C. and Marsit, Carmen J. and Karagas, Margaret R. and Kelsey, Karl T. and Wiencke, John K.},
+	month = mar,
+	year = {2017},
+	pmid = {27965295},
+	note = {Publisher: American Association for Cancer Research
+Section: Research Articles},
+	pages = {328--338},
+}
+
 @article{rodesch1992,
 	title = {Oxygen measurements in endometrial and trophoblastic tissues during early pregnancy},
 	volume = {80},
