--- a/Sections/12_Discussion.Rmd
+++ b/Sections/12_Discussion.Rmd
@@ -45,6 +45,13 @@ Conservation of placental features in trophoblasts is not unsurprising, given th
 However, trophoblast is itself a heterogenous population, with STB becoming the more predominant subtype in later gestation.
 Lastly, I assessed cell composition in placental chorionic villi samples using the cell-specific methylomes as a reference for cell deconvolution.
 I found that cell composition of chorionic villi between first trimester and term placentas to be highly consistent with previous literature reports from using histology to measure cell composition.
+First trimester chorionic villi had little STB, and was instead mostly CTB, but at term, the bulk of chorionic villi becomes STB. 
+This is consistent with our understanding of STB dynamics throughout gestation.
+STB undergoes little apoptosis but instead accrues inactive nuclei throughout gestation, while concurrently growing from constant fusion of the underlying CTB layer [@fogarty2011; @mayhew2001].
+Since its introduction, DNAm-based cell deconvolution has been useful in producing insights into the cellular dynamics of tissues such as blood [@houseman2012], which have in part been supported by the regular improvements reference datasets and bioinformatic applications.
+The quantity and quality of reference data has increased, allowing for selection of better quality reference CpGs, and accounting for other sources of variation, such as age (i.e. fetal versus adult) [@gervin2019; @bakulski2016; @degoede2017; @gervin2016; @lin2018].
+In conjunction with other biomarkers, DNAm-based cell deconvolution has also been explored as a predictor of disease, treatment response, and cancer survival [@kong2019, @filipski2021, @koestler2017].
+The placental reference I generated will be similarly useful in understanding DNAm in the context of placental biology and health, and will see improved application as more reference data is obtained to cover more specific cell populations and account for different types of human variability.
 
 <!--Chapter 4 -->
 
