discussion: Add to deconvo section

--- a/References/references.bib
+++ b/References/references.bib
@@ -1,4 +1,17 @@
 
+@article{salavati2019,
+	title = {The {Possible} {Role} of {Placental} {Morphometry} in the {Detection} of {Fetal} {Growth} {Restriction}},
+	volume = {9},
+	issn = {1664-042X},
+	url = {https://www.frontiersin.org/article/10.3389/fphys.2018.01884},
+	doi = {10.3389/fphys.2018.01884},
+	urldate = {2021-11-10},
+	journal = {Frontiers in Physiology},
+	author = {Salavati, Nastaran and Smies, Maddy and Ganzevoort, Wessel and Charles, Adrian K. and Erwich, Jan Jaap and Plösch, Torsten and Gordijn, Sanne J.},
+	year = {2019},
+	pages = {1884},
+}
+
 @article{kong2019,
 	title = {Insights from deconvolution of cell subtype proportions enhance the interpretation of functional genomic data},
 	volume = {14},
