--- a/Sections/12_Discussion.Rmd
+++ b/Sections/12_Discussion.Rmd
@@ -42,17 +42,21 @@ I found highly placental cell-specific DNAm using the 850k Illumina DNAm microar
 Cell-specific DNAm often occured at promoters and regulatory elements (i.e. enhancers, CpG Islands) near known placental-specific genes, some of which had DNAm that previously had not been characterized before.
 Interestingly, I found that for many placental-specific DNAm features, such as PMDs, placental-specific imprinting, and repetitive elements, I found were present in trophoblasts, variably or intermediately present in endothelial and stromal cells, and mostly absent in Hofbauer cells.
 Conservation of placental features in trophoblasts is not unsurprising, given that trophoblast make up the bulk of placenta throughout pregnancy.
-However, trophoblast is itself a heterogenous population, with STB becoming the more predominant subtype in later gestation.
+However, trophoblast is itself a heterogenous population, with STB becoming the more predominant subtype in later gestation [@mayhew2001].
+
 Lastly, I assessed cell composition in placental chorionic villi samples using the cell-specific methylomes as a reference for cell deconvolution.
 I found that cell composition of chorionic villi between first trimester and term placentas to be highly consistent with previous literature reports from using histology to measure cell composition.
 First trimester chorionic villi had little STB, and was instead mostly CTB, but at term, the bulk of chorionic villi becomes STB. 
 This is consistent with our understanding of STB dynamics throughout gestation.
 STB undergoes little apoptosis but instead accrues inactive nuclei throughout gestation, while concurrently growing from constant fusion of the underlying CTB layer [@fogarty2011; @mayhew2001].
-Since its introduction, DNAm-based cell deconvolution has been useful in producing insights into the cellular dynamics of tissues such as blood [@houseman2012], which have in part been supported by the regular improvements reference datasets and bioinformatic applications.
-The quantity and quality of reference data has increased, allowing for selection of better quality reference CpGs, and accounting for other sources of variation, such as age (i.e. fetal versus adult) [@gervin2019; @bakulski2016; @degoede2017; @gervin2016; @lin2018].
-In conjunction with other biomarkers, DNAm-based cell deconvolution has also been explored as a predictor of disease, treatment response, and cancer survival [@kong2019, @filipski2021, @koestler2017].
-The placental reference I generated will be similarly useful in understanding DNAm in the context of placental biology and health, and will see improved application as more reference data is obtained to cover more specific cell populations and account for different types of human variability.
 
+It will be interesting to investigate whether cell composition changes can be detected using placental DNAm cell deconvolution, since placental-associated phenotypes are often correlated with cell-specific and structural changes in the placenta.
+For example, fetal growth is associated with gross placental morphological changes, such as placental diameter and thickness, and placental weight relative to birth weight [@salavati2019]. 
+However, it is unclear if cell composition also increases proportionally or if the relative proportion of specific cell populations becomes altered. 
+Successes in other tissues, such as blood, indicate that DNAm-based cell deconvolution can be highly useful in uncovering insights into human variation. 
+DNAm-based cell deconvolution has been demonstrated to be a predictor of disease, treatment response, and cancer survival [@kong2019, @filipski2021, @koestler2017].
+Moreover, blood-based cell deconvolution has seen regular improvements to reference datasets and bioinformatic applications, allowing for selection of better quality reference CpGs, and accounting for other sources of variation, such as age (i.e. fetal versus adult) [@gervin2019; @bakulski2016; @degoede2017; @gervin2016; @lin2018].
+I helped generate the first placental reference for DNAm-based cell deconvolution, which will see continued improvements in reference data quality that will lead to a better understanding of the cellular variation associated with placental-mediated phenotypes. 
 
 <!--Chapter 4 -->
 
