discussion add cell comp, add scWGBS

--- a/References/references.bib
+++ b/References/references.bib
@@ -1,3 +1,27 @@
+@article{luo2017,
+	title = {Single-cell methylomes identify neuronal subtypes and regulatory elements in mammalian cortex},
+	volume = {357},
+	url = {https://www.science.org/doi/10.1126/science.aan3351},
+	doi = {10.1126/science.aan3351},
+	number = {6351},
+	urldate = {2021-11-10},
+	journal = {Science},
+	author = {Luo, Chongyuan and Keown, Christopher L. and Kurihara, Laurie and Zhou, Jingtian and He, Yupeng and Li, Junhao and Castanon, Rosa and Lucero, Jacinta and Nery, Joseph R. and Sandoval, Justin P. and Bui, Brian and Sejnowski, Terrence J. and Harkins, Timothy T. and Mukamel, Eran A. and Behrens, M. Margarita and Ecker, Joseph R.},
+	month = aug,
+	year = {2017},
+	note = {Publisher: American Association for the Advancement of Science},
+	pages = {600--604},
+}
+
+@article{smallwood2014,
+	title = {bisulfite sequencing for assessing epigenetic heterogeneity},
+	volume = {11},
+	doi = {10.1038/nmeth.3035},
+	number = {8},
+	author = {Smallwood, Sébastien A and Lee, Heather J and Angermueller, Christof and Krueger, Felix and Saadeh, Heba and Peat, Julian and Andrews, Simon R and Stegle, Oliver and Reik, Wolf and Kelsey, Gavin},
+	year = {2014},
+	pages = {6--11},
+}
 
 @article{salavati2019,
 	title = {The {Possible} {Role} of {Placental} {Morphometry} in the {Detection} of {Fetal} {Growth} {Restriction}},
