remove 's' from genome sciences and tech

--- a/Sections/00_Cover.Rmd
+++ b/Sections/00_Cover.Rmd
@@ -51,7 +51,7 @@ THE FACULTY OF GRADUATE AND POSTDOCTORAL STUDIES
 
 \vspace{5mm}
 
-(Genome Sciences and Technology)
+(Genome Science and Technology)
 
 \vspace{5mm}
 
