--- a/Sections/01_Committee_form.Rmd
+++ b/Sections/01_Committee_form.Rmd
@@ -23,7 +23,7 @@ submitted by \underline{Victor Yuan} in partial fulfillment of the requirements 
 
 the degree of \noindent\underline{\makebox[5in][l]{Doctor of Philosophy}}  
 
-in \noindent\underline{\makebox[5.8in][l]{Genome Sciences and Technology}}
+in \noindent\underline{\makebox[5.8in][l]{Genome Science and Technology}}
 
 \vspace{5mm}
 
