link color change to black from blue

--- a/main_script.Rmd
+++ b/main_script.Rmd
@@ -21,7 +21,7 @@ header-includes:
 bibliography: ./References/references.bib
 csl: ./References/reference_format.csl
 link-citations: yes
-linkcolor: blue
+linkcolor: black
 ---
 
 
