--- a/main_script.Rmd
+++ b/main_script.Rmd
@@ -163,7 +163,7 @@ NOTE: Remove normal markdown chapters before rendering to PDF  -->
 
 \clearpage
 
-# Chapter One: Introduction
+# Introduction
 
 <!-- Set Numbering properly for rest of the document -->
 \pagenumbering{arabic}
@@ -186,7 +186,7 @@ NOTE: Remove normal markdown chapters before rendering to PDF  -->
 <!-- From here on, include your different data chapters using normal Rmarkdown titles -->
 
 <!-- Modify me! -->
-# Chapter Two: Accurate ethnicity prediction from placental DNA methylation data
+# Accurate ethnicity prediction from placental DNA methylation data
 
 <!-- Set figure and table numbering according to the chapter -->
 \renewcommand{\thefigure}{2.\arabic{figure}}
@@ -202,7 +202,7 @@ NOTE: Remove normal markdown chapters before rendering to PDF  -->
 \clearpage
 
 <!-- Modify me! -->
-# Chapter Three: Cell-specific characterization of the placental methylome
+# Cell-specific characterization of the placental methylome
 
 <!-- Set figure and table numbering according to the chapter -->
 \renewcommand{\thefigure}{3.\arabic{figure}}
@@ -218,7 +218,7 @@ NOTE: Remove normal markdown chapters before rendering to PDF  -->
 \clearpage
 
 <!-- Modify me! -->
-# Chapter Four: Maternal contamination in placental DNA methylation studies
+# Maternal contamination in placental DNA methylation studies
 
 <!-- Set figure and table numbering according to the chapter -->
 \renewcommand{\thefigure}{4.\arabic{figure}}
