--- a/Sections/05_Glossary.Rmd
+++ b/Sections/05_Glossary.Rmd
@@ -14,6 +14,7 @@ readr::read_csv(here::here('glossary.csv')) %>%
    col.names = NULL,
    longtable = TRUE) %>%
    column_spec(1, width = "2cm") %>%  # Size of first column
-   column_spec(1, bold = T) # Abbreviation bold
-
+   column_spec(1, bold = T) %>% # Abbreviation bold 
+  sub("\\\\toprule", "", .) %>% # removes top border
+  sub("\\\\bottomrule", "", .) # removes bottom border
 ```
